syntax = "proto3";

package dex.uniswap.v1;

message Events { repeated Transaction transactions = 1; }

message Transaction {
  bytes hash = 1;
  bytes from = 2;
  optional bytes to = 3;
  uint64 nonce = 5;
  string gas_price = 6; // uint256
  uint64 gas_limit = 7;
  uint64 gas_used = 8;
  string value = 9; // uint256
  repeated Log logs = 10;
}

// https://github.com/Uniswap/v1-contracts/blob/master/contracts/uniswap_exchange.vy
// https://github.com/Uniswap/v1-contracts/blob/master/contracts/uniswap_factory.vy
message Log {
  bytes address = 1;
  uint64 ordinal = 2;
  repeated bytes topics = 3;
  bytes data = 4;
  oneof log {
    // Exchange
    TokenPurchase token_purchase = 10;
    EthPurchase eth_purchase = 11;
    AddLiquidity add_liquidity = 12;
    RemoveLiquidity remove_liquidity = 13;
    Transfer transfer = 14;
    Approval approval = 15;

    // Factory
    NewExchange new_exchange = 16;
  }
}

/// @notice Emitted when ETH is sold for tokens
/// @param buyer The address of the buyer
/// @param eth_sold The amount of ETH sold
/// @param tokens_bought The amount of tokens bought
message TokenPurchase {
  bytes buyer = 1;          // address (indexed)
  string eth_sold = 2;      // uint256 (indexed)
  string tokens_bought = 3; // uint256 (indexed)
}

/// @notice Emitted when tokens are sold for ETH
/// @param buyer The address of the buyer
/// @param tokens_sold The amount of tokens sold
/// @param eth_bought The amount of ETH bought
message EthPurchase {
  bytes buyer = 1;        // address (indexed)
  string tokens_sold = 2; // uint256 (indexed)
  string eth_bought = 3;  // uint256 (indexed)
}

/// @notice Emitted when liquidity is added to the pool
/// @param provider The liquidity provider address
/// @param eth_amount The amount of ETH added
/// @param token_amount The amount of tokens added
message AddLiquidity {
  bytes provider = 1;      // address (indexed)
  string eth_amount = 2;   // uint256 (indexed)
  string token_amount = 3; // uint256 (indexed)
}

/// @notice Emitted when liquidity is removed from the pool
/// @param provider The liquidity provider address
/// @param eth_amount The amount of ETH removed
/// @param token_amount The amount of tokens removed
message RemoveLiquidity {
  bytes provider = 1;      // address (indexed)
  string eth_amount = 2;   // uint256 (indexed)
  string token_amount = 3; // uint256 (indexed)
}

/// @notice Emitted when tokens are transferred
/// @param from The address sending tokens
/// @param to The address receiving tokens
/// @param value The amount of tokens transferred
message Transfer {
  bytes from = 1;   // address (indexed as _from)
  bytes to = 2;     // address (indexed as _to)
  string value = 3; // uint256 (_value)
}

/// @notice Emitted when an approval is made
/// @param owner The address of the token owner
/// @param spender The address of the spender
/// @param value The amount of tokens approved
message Approval {
  bytes owner = 1;   // address (indexed as _owner)
  bytes spender = 2; // address (indexed as _spender)
  string value = 3;  // uint256 (_value)
}

/// @notice Emitted when a new exchange is created
/// @param token The token address
/// @param exchange The exchange address
message NewExchange {
  bytes factory = 1;  // log.address - the factory that created the exchange
  bytes token = 2;    // address (indexed)
  bytes exchange = 3; // address (indexed)
}
